compile with OWLAPI 5